--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What Should You Do When AI Takes Over? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Backtesting: Does It REALLY Matter for Trading Bots? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Let's Cook! 👨🏼‍🍳 Strategy Build November 2025 🚀</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -251,9 +251,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=oYR21kX8a58" target="_blank">
-                    <img src="https://i.ytimg.com/vi/oYR21kX8a58/mqdefault.jpg" alt="This Meditation Opens Up Past Life Memories | Sadhguru">
+                    <img src="https://i.ytimg.com/vi/oYR21kX8a58/mqdefault.jpg" alt="Opening Up Memories of Past Lives | Sadhguru">
                     <div class="video-info">
-                        <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
+                        <h3>Opening Up Memories of Past Lives | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Backtesting: Does It REALLY Matter for Trading Bots? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Let's Cook! 👨🏼‍🍳 Strategy Build November 2025 🚀</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>What Should You Do When AI Takes Over? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7267,9 +7267,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=oYR21kX8a58" target="_blank">
-                        <img src="https://i.ytimg.com/vi/oYR21kX8a58/mqdefault.jpg" alt="This Meditation Opens Up Past Life Memories | Sadhguru">
+                        <img src="https://i.ytimg.com/vi/oYR21kX8a58/mqdefault.jpg" alt="Opening Up Memories of Past Lives | Sadhguru">
                         <div class="video-info">
-                            <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
+                            <h3>Opening Up Memories of Past Lives | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">Yesterday</div>
                         </div>
