--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Why Passive Investing Crushes Stock Picking (Backed by Data)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">55 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Finding Your Way Back to the Beauty Within</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 11</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Do Moving Average Crossovers Really Predict Price Direction?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Passive Investing Crushes Stock Picking (Backed by Data)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">55 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 11</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>Do Moving Average Crossovers Really Predict Price Direction?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Finding Your Way Back to the Beauty Within</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
